adding documentation as requested

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test-ui": "npx playwright test --ui",
-    "e2e": "npx playwright test --ui"
+    "e2e": "npx playwright test --ui",
+    "locators-check": "npx playwright codegen saucedemo.com"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,9 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.44.1",
-    "@types/node": "^20.14.1"
+    "@ts-docs/default-docs-structure": "^0.4.4",
+    "@ts-docs/ts-docs": "^0.4.4",
+    "@types/node": "^20.14.1",
+    "typedoc": "^0.26.3"
   }
 }
